@@ -182,13 +182,9 @@ public class PreflightConfiguration
 
         try
         {
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         }
-        catch (InstantiationException e)
-        {
-            throw new ValidationException(processName + " can't be created", e);
-        }
-        catch (IllegalAccessException e)
+        catch (ReflectiveOperationException e)
         {
             throw new ValidationException(processName + " can't be created", e);
         }
